# templatestore/views.py
@@ -3,8 +3,9 @@ from django.http import JsonResponse, HttpResponse, HttpResponseBadRequest
 from django.views.decorators.csrf import csrf_exempt
 from datetime import datetime
 import json
-from .models import Template, TemplateVersion
+from templatestore.models import Template, TemplateVersion
 from django.db.models.functions import Length
+from django.db import transaction
 
 
 def index(request):
@@ -15,6 +16,7 @@ def render_via_jinja(template, context):
     from jinja2 import Template
 
     return Template(template).render(context)
+
 
 @csrf_exempt
 def render_template_view(request):
@@ -41,81 +43,153 @@ def render_template_view(request):
 
 
 @csrf_exempt
-def template_view(request):
+def get_templates_view(request):
     if request.method == "GET":
-        offset = int(request.GET.get("offset", 0))
-        limit = int(request.GET.get("limit", 100))
         try:
+            offset = int(request.GET.get("offset", 0))
+            limit = int(request.GET.get("limit", 100))
+
             templates = Template.objects.all()[offset : offset + limit]
-            template_list = []
-            for template in templates:
-                default = False
-                version = "0"
-                if template.default_version_id != 0:
-                    default = True
-                    version = TemplateVersion.objects.get(
-                        pk=template.default_version_id
+            template_list = [
+                {
+                    "name": t.name,
+                    "version": TemplateVersion.objects.get(
+                        pk=t.default_version_id
                     ).version
+                    if t.default_version_id
+                    else "0.1",
+                    "default": True if t.default_version_id else False,
+                    "type": t.type,
+                    "attributes": t.attributes,
+                }
+                for t in templates
+            ]
 
-                data = {"name": template.name, "version": version, "default": default}
-                template_list.append(data)
             return JsonResponse(template_list, safe=False)
+
         except Exception:
-            return HttpResponse(status=404)
+            return HttpResponse(status=400)
 
-    elif request.method == "POST":
-        data = json.loads(request.body)
-        name = data["name"]
-        template = Template.objects.filter(name=name)
-        flag = 0
+    else:
+        return HttpResponse(status=404)
 
-        if not len(template):
-            # Why this case ?
-            data["version"] = "0.1"
-            temp = Template.objects.create(
-                name=name, default_version_id=0, attributes=data["attributes"]
-            )
-            flag = 1
-            try:
-                temp.save()
-            except Exception:
-                return HttpResponse(status=400)
 
-            data["template_id"] = temp
-
-        else:
-            template = Template.objects.get(name=name)
-
-            max_version = TemplateVersion.objects.filter(template_id=template).order_by(
-                -Length("version"), "-version"
-            )[:1]
-            major_version, minor_version = max_version[0].version.split(".")
-
-            minor_version = str(int(minor_version) + 1)
-
-            data["version"] = major_version + "." + minor_version
-            data["template_id"] = template
-
+@csrf_exempt
+@transaction.atomic
+def post_template_view(request):
+    if request.method == "POST":
         try:
+            data = json.loads(request.body)
+            # TODO: Validations
+
+            templates = Template.objects.filter(name=data["name"])
+            if not len(templates):
+                temp = Template.objects.create(
+                    name=data["name"], attributes=data["attributes"]
+                )
+                temp.save()
+
+                version = "0.1"
+                template_id = temp
+
+            else:
+                template = Template.objects.get(name=name)
+                max_version = TemplateVersion.objects.filter(
+                    template_id=template
+                ).order_by(-Length("version"), "-version")[:1]
+                major_version, minor_version = max_version[0].version.split(".")
+                minor_version = str(int(minor_version) + 1)
+
+                version = major_version + "." + minor_version
+                template_id = template
+
             temp = TemplateVersion.objects.create(
-                template_id=data["template_id"],
+                template_id=template_id,
                 data=data["data"],
-                version=data["version"],
+                version=version,
                 sample_context_data=data["sample_context_data"],
             )
             temp.save()
             template_data = {
                 "name": data["name"],
-                "version": data["version"],
+                "version": version,
                 "default": False,
             }
             return JsonResponse(template_data, status=201)
+
         except Exception as e:
             print(e)
-            if flag == 1:
-                temp = Template.objects.get(name=name)
-                temp.delete()
             return HttpResponse(status=400)
+
+    else:
+        return HttpResponse(status=404)
+
+@csrf_exempt
+def get_template_versions_view(request, name):
+    if request.method == "GET":
+        try:
+            offset = int(request.GET.get("offset", 0))
+            limit = int(request.GET.get("limit", 100))
+
+            t = Template.objects.get()
+
+            templates = Template.objects.all()[offset : offset + limit]
+            template_list = [
+                {
+                    "name": t.name,
+                    "version": TemplateVersion.objects.get(
+                        pk=t.default_version_id
+                    ).version
+                    if t.default_version_id
+                    else "0.1",
+                    "default": True if t.default_version_id else False,
+                    "type": t.type,
+                    "attributes": t.attributes,
+                }
+                for t in templates
+            ]
+
+            return JsonResponse(template_list, safe=False)
+
+        except Exception:
+            return HttpResponse(status=400)
+
+    else:
+        return HttpResponse(status=404)
+
+@csrf_exempt
+def get_render_template_view(request, name, version=None):
+    if request.method == "GET":
+        try:
+            data = json.loads(request.body)
+
+            t = Template.objects.get(name=name)
+            tv = (
+                TemplateVersion.objects.get(template_id=t.id, version=version)
+                if version
+                else TemplateVersion.objects.get(id=t.default_version_id)
+            )
+            stpls = SubTemplate.objects.get(template_version_id=tv.id)
+
+            res = {
+                "version": tv.version,
+                "type": t.type,
+                "attributes": t.attributes,
+                "sub_templates": [
+                    {
+                        "type": stpl.type,
+                        "rendered_data": render_via_jinja(
+                            stpl.data, data["context_data"]
+                        ),
+                    }
+                    for stpl in stpls
+                ],
+            }
+
+            return JsonResponse(res, safe=False)
+        except Exception:
+            return HttpResponse(status=400)
+
     else:
         return HttpResponse(status=404)
 
@@ -184,9 +258,47 @@ def template_details_view(request, name, version):
 
         template_data = {"name": name, "version": temp.version, "default": default}
         return JsonResponse(template_data, status=200)
+    elif request.method == "PUT":
+        data = json.loads(request.body)
+        default = data["default"]
+        if not default:
+            return HttpResponse(status=400)
 
+        tmp = Template.objects.get(name=name)
+        max_version = TemplateVersion.objects.filter(template_id=tmp).order_by(
+            -Length("version"), "-version"
+        )[:1]
+        major_version, minor_version = max_version[0].version.split(".")
+        major_version = str(float(int(major_version) + 1))
+
+        temp = TemplateVersion.objects.create(
+            template_id=tmp,
+            data=template.data,
+            version=major_version,
+            status=template.status,
+            sample_context_data=template.sample_context_data,
+        )
+
+        try:
+            temp.save()
+        except Exception as e:
+            print(e)
+            return HttpResponse(status=400)
+
+        temp2 = Template.objects.get(name=name)
+        temp2.default_version_id = temp.id
+
+        try:
+            temp2.save()
+        except Exception as e:
+            print(e)
+            return JsonResponse(Exception)
+
+        template_data = {"name": name, "version": temp.version, "default": default}
+        return JsonResponse(template_data, status=200)
     else:
         return HttpResponse(status=404)
+
 
 @csrf_exempt
 def config_view(request):
@@ -208,6 +320,7 @@ def config_view(request):
             #     data = {"name": template.name, "version": version, "default": default}
             #     template_list.append(data)
             # return JsonResponse(template_list, safe=False)
+            pass
         except Exception:
             return HttpResponse(status=404)
     else:
